--- a/iac/use-cases/byok-cluster/Makefile
+++ b/iac/use-cases/byok-cluster/Makefile
@@ -1,28 +1,4 @@
-include ${TERRAFORM_DIR}/modules.mk
-
-MODULES = aws/kms/key										\
-		  confluent/byok-aws								\
-		  aws/kms/key-policy								\
-		  aws/networking/vpc								\
-		  aws/networking/security-groups/ssh-access			\
-		  confluent/environment								\
-		  confluent/network									\
-		  confluent/private-link							\
-		  aws/networking/private-link						\
-		  confluent/cluster									\
-		  aws/eks											\
-		  IRSA												\
-
-		  azure/app-registration 							\
-		  azure/managed-identity							\
-		  azure/federated-managed-identity					\
-		  confluent/identity-provider						\
-		  confluent/identity-pool-topic-owner				\
-		  confluent/identity-pool-topic-owner-permission	\
-		  confluent/identity-pool-producer					\
-		  confluent/identity-pool-producer-permission		\
-		  confluent/identity-pool-consumer					\
-		  confluent/identity-pool-consumer-permission
+include ${IAC_DIR}/modules.mk
 
 MODULES = azure/resource-group								\
 		  azure/key-vault									\
@@ -45,3 +21,27 @@ MODULES = azure/resource-group								\
 		  confluent/identity-pool-producer-permission		\
 		  confluent/identity-pool-consumer					\
 		  confluent/identity-pool-consumer-permission
+
+MODULES = aws/kms/key										\
+		  confluent/byok-aws								\
+		  aws/kms/key-policy								\
+		  aws/networking/vpc								\
+		  aws/networking/security-groups/ssh-access			\
+		  confluent/environment								\
+		  confluent/network									\
+		  confluent/private-link							\
+		  aws/networking/private-link						\
+		  # confluent/cluster									\
+		  # aws/eks											\
+		  # IRSA												\
+		  # azure/app-registration 							\
+		  # azure/managed-identity							\
+		  # azure/federated-managed-identity					\
+		  # confluent/identity-provider						\
+		  # confluent/identity-pool-topic-owner				\
+		  # confluent/identity-pool-topic-owner-permission	\
+		  # confluent/identity-pool-producer					\
+		  # confluent/identity-pool-producer-permission		\
+		  # confluent/identity-pool-consumer					\
+		  # confluent/identity-pool-consumer-permission
+
