--- a/k8s/Makefile
+++ b/k8s/Makefile
@@ -1,23 +1,21 @@
-APPLICATION_NAMESPACE=confluent-cloud-azure
-SERVICE_ACCOUNT_READ=read-sa
+APPLICATION_NAMESPACE=subscriber
+SERVICE_ACCOUNT_READ=read
 SERVICE_ACCOUNT_TOPIC_OWNER=topic-owner-sa
-SERVICE_ACCOUNT_WRITE=write-sa
+SERVICE_ACCOUNT_WRITE=write
 
-CLUSTER_ID						:= $(shell jq -r '.outputs.cluster_id.value' ../terraform/confluent/cluster/terraform.tfstate)
-BOOTSTRAP_SERVERS				:= $(shell jq -r '.outputs.bootstrap_endpoint.value' ../terraform/confluent/cluster/terraform.tfstate)
+EKS_CLUSTER_NAME = $(shell jq -r '.outputs.id.value' ../iac/use-cases/byok-cluster/aws/eks/cluster/terraform.tfstate)
+CLUSTER_ID						:= $(shell jq -r '.outputs.cluster_id.value' ../iac/use-cases/byok-cluster/confluent/cluster/terraform.tfstate)
+BOOTSTRAP_SERVERS				:= $(shell jq -r '.outputs.bootstrap_endpoint.value' ../iac/use-cases/byok-cluster/confluent/cluster/terraform.tfstate)
 
-TENANT_ID						:= $(shell jq -r '.outputs.tenant_id.value' ../terraform/azure/resource-group/terraform.tfstate)
-APPLICATION_CLIENT_ID			:= $(shell jq -r '.outputs.client_id.value' ../terraform/azure/app-registration/terraform.tfstate)
-MANAGED_IDENTITY_CLIENT_ID		:= $(shell jq -r '.outputs.client_id.value' ../terraform/azure/managed-identity/terraform.tfstate)
-TOPIC_OWNER_IDENTITY_POOL_ID	:= $(shell jq -r '.outputs.id.value' ../terraform/confluent/identity-pool-topic-owner/terraform.tfstate)
-PRODUCER_IDENTITY_POOL_ID		:= $(shell jq -r '.outputs.id.value' ../terraform/confluent/identity-pool-producer/terraform.tfstate)
-CONSUMER_IDENTITY_POOL_ID		:= $(shell jq -r '.outputs.id.value' ../terraform/confluent/identity-pool-consumer/terraform.tfstate)
+# EKS_TOPIC_OWNER_ROLE_ARN=$(shell jq -r '.outputs.arn.value' ../iac/use-cases/byok-cluster/aws/iam/roles/topic-owner/terraform.tfstate)
+EKS_WRITE_ROLE_ARN=$(shell jq -r '.outputs.arn.value' ../iac/use-cases/byok-cluster/aws/iam/roles/subscriber-write/terraform.tfstate)
+EKS_READ_ROLE_ARN=$(shell jq -r '.outputs.arn.value' ../iac/use-cases/byok-cluster/aws/iam/roles/subscriber-read/terraform.tfstate)
 
 get-pods:
 	kubectl get pods --namespace ${APPLICATION_NAMESPACE}
 
-setup-aks:
-	az aks get-credentials --resource-group poc-aks-dev --name aks-kafka-dev
+setup-kubconfig:
+	aws eks update-kubeconfig --region us-east-1 --name ${EKS_CLUSTER_NAME} --profile main_account
 
 create-namespace:
 	kubectl create namespace ${APPLICATION_NAMESPACE}
@@ -30,6 +28,9 @@ create-service-accounts:
 	SERVICE_ACCOUNT_TOPIC_OWNER=${SERVICE_ACCOUNT_TOPIC_OWNER}				\
 	SERVICE_ACCOUNT_READ=${SERVICE_ACCOUNT_READ}							\
 	SERVICE_ACCOUNT_WRITE=${SERVICE_ACCOUNT_WRITE}							\
+	EKS_TOPIC_OWNER_ROLE_ARN=${EKS_WRITE_ROLE_ARN}							\
+	EKS_READ_ROLE_ARN=${EKS_READ_ROLE_ARN}									\
+	EKS_WRITE_ROLE_ARN=${EKS_WRITE_ROLE_ARN}								\
 	MANAGED_IDENTITY_CLIENT_ID=${MANAGED_IDENTITY_CLIENT_ID}				\
 		envsubst < ./deployments/service-account.yml | kubectl apply -f -
 
@@ -42,16 +43,10 @@ delete-service-accounts:
 	kubectl delete sa --namespace ${APPLICATION_NAMESPACE} ${SERVICE_ACCOUNT_WRITE}
 
 create-client-properties-configmap:
-	CLUSTER_ID=${CLUSTER_ID}												\
-	TOPIC_OWNER_IDENTITY_POOL_ID=${TOPIC_OWNER_IDENTITY_POOL_ID}			\
-	PRODUCER_IDENTITY_POOL_ID=${PRODUCER_IDENTITY_POOL_ID}					\
-	CONSUMER_IDENTITY_POOL_ID=${CONSUMER_IDENTITY_POOL_ID}					\
-	APPLICATION_CLIENT_ID=${APPLICATION_CLIENT_ID}							\
-		envsubst < ./deployments/client-properties.yml | kubectl apply -f -
+	envsubst < ./deployments/client-properties.yml | kubectl apply -f -
 
 deploy-kafka-clients: create-client-properties-configmap
 	APPLICATION_NAMESPACE=${APPLICATION_NAMESPACE}							\
-	SERVICE_ACCOUNT_TOPIC_OWNER=${SERVICE_ACCOUNT_TOPIC_OWNER} 				\
 	SERVICE_ACCOUNT_READ=${SERVICE_ACCOUNT_READ} 							\
 	SERVICE_ACCOUNT_WRITE=${SERVICE_ACCOUNT_WRITE}							\
 	BOOTSTRAP_SERVER=${BOOTSTRAP_SERVERS}									\
@@ -62,8 +57,8 @@ delete-kafka-clients:
 	kubectl delete pod --namespace ${APPLICATION_NAMESPACE} kafka-producer kafka-consumer kafka-topic-owner
 
 check-kafka-clients-identities:
-	kubectl exec --namespace ${APPLICATION_NAMESPACE} -it kafka-producer -- env | grep AZURE
-	kubectl exec --namespace ${APPLICATION_NAMESPACE} -it kafka-consumer -- env | grep AZURE
+	kubectl exec --namespace ${APPLICATION_NAMESPACE} -it kafka-producer -- env
+	kubectl exec --namespace ${APPLICATION_NAMESPACE} -it kafka-consumer -- env
 
 cp-confluent-dependency-to-pods:
 	kubectl cp ${CONFLUENT_OAUTH_EXTENSIONS_LIB_PATH} ${APPLICATION_NAMESPACE}/kafka-producer:/opt/kafka/libs/
