--- a/k8s/deployments/service-account.yml
+++ b/k8s/deployments/service-account.yml
@@ -1,23 +1,29 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  # annotations:
+  #   azure.workload.identity/client-id: ${MANAGED_IDENTITY_CLIENT_ID}
   annotations:
-    azure.workload.identity/client-id: ${MANAGED_IDENTITY_CLIENT_ID}
+    eks.amazonaws.com/role-arn: ${EKS_TOPIC_OWNER_ROLE_ARN}
   name: ${SERVICE_ACCOUNT_TOPIC_OWNER}
   namespace: ${APPLICATION_NAMESPACE}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  # annotations:
+  #   azure.workload.identity/client-id: ${MANAGED_IDENTITY_CLIENT_ID}
   annotations:
-    azure.workload.identity/client-id: ${MANAGED_IDENTITY_CLIENT_ID}
+    eks.amazonaws.com/role-arn: ${EKS_READ_ROLE_ARN}
   name: ${SERVICE_ACCOUNT_READ}
   namespace: ${APPLICATION_NAMESPACE}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  # annotations:
+  #   azure.workload.identity/client-id: ${MANAGED_IDENTITY_CLIENT_ID}
   annotations:
-    azure.workload.identity/client-id: ${MANAGED_IDENTITY_CLIENT_ID}
+    eks.amazonaws.com/role-arn: ${EKS_WRITE_ROLE_ARN}
   name: ${SERVICE_ACCOUNT_WRITE}
   namespace: ${APPLICATION_NAMESPACE}
