--- a/k8s/deployments/client-properties.yml
+++ b/k8s/deployments/client-properties.yml
@@ -1,85 +1,53 @@
-# apiVersion: v1
-# kind: ConfigMap
-# metadata:
-#   name: client-properties-configmap
-#   namespace: subscriber
-# data:
-#   client_iam.properties: |
-#     # security.protocol=SASL_SSL
-#     # sasl.mechanism=AWS_MSK_IAM
-#     # sasl.jaas.config=software.amazon.msk.auth.iam.IAMLoginModule required;
-#     # sasl.client.callback.handler.class=software.amazon.msk.auth.iam.IAMClientCallbackHandler
-#     security.protocol=SASL_SSL
-#     sasl.mechanism=OAUTHBEARER
-#     sasl.login.callback.handler.class=io.confluent.kafka.clients.plugins.auth.token.TokenUserLoginCallbackHandler
-#     sasl.login.callback.handler.class=com.yourco.kafka.OidcFileLoginCallbackHandler
-
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: client-properties-configmap-producer
-  namespace: confluent-cloud-aws
+  namespace: ${APPLICATION_NAMESPACE}
 data:
   client_iam.properties: |
     security.protocol=SASL_SSL
     sasl.mechanism=OAUTHBEARER
-    #sasl.oauthbearer.token.file=/var/run/secrets/pods.eks.amazonaws.com/serviceaccount/eks-pod-identity-token
-    sasl.login.callback.handler.class=io.confluent.oauth.kubernetes.OAuthBearerLoginCallbackHandler
-    sasl.jaas.config=org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required;
-    sasl.oauthbearer.extensions=logicalCluster='${CLUSTER_ID},identityPoolId='${PRODUCER_IDENTITY_POOL_ID}'
-    # sasl.oauthbearer.token.endpoint.url=http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=${APPLICATION_CLIENT_ID}
-    # sasl.login.callback.handler.class=io.confluent.oauth.azure.managedidentity.OAuthBearerLoginCallbackHandler
-    # sasl.jaas.config= \
-    #    org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
-    #        clientId='ignored' \
-    #        clientSecret='ignored' \
-    #        extension_logicalCluster='${CLUSTER_ID}' \
-    #        extension_identityPoolId='${PRODUCER_IDENTITY_POOL_ID}';
+    sasl.oauthbearer.token.file=/var/run/secrets/eks.amazonaws.com/serviceaccount/token
+    sasl.login.callback.handler.class=io.confluent.oauth.aws.serviceaccount.OAuthBearerLoginCallbackHandler
+    sasl.jaas.config= \
+       org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
+           clientId='ignored' \
+           clientSecret='ignored' \
+           extension_logicalCluster='${CLUSTER_ID}' \
+           extension_identityPoolId='${PRODUCER_IDENTITY_POOL_ID}';
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: client-properties-configmap-consumer
-  namespace: confluent-cloud-aws
+  namespace: ${APPLICATION_NAMESPACE}
 data:
   client_iam.properties: |
     security.protocol=SASL_SSL
     sasl.mechanism=OAUTHBEARER
-    #sasl.oauthbearer.token.file=/var/run/secrets/pods.eks.amazonaws.com/serviceaccount/eks-pod-identity-token
-    sasl.login.callback.handler.class=io.confluent.oauth.kubernetes.OAuthBearerLoginCallbackHandler
-    sasl.jaas.config=org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required;
-    sasl.oauthbearer.extensions=logicalCluster='${CLUSTER_ID},identityPoolId='${CONSUMER_IDENTITY_POOL_ID}'
-    # security.protocol=SASL_SSL
-    # sasl.oauthbearer.token.endpoint.url=http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=${APPLICATION_CLIENT_ID}
-    # sasl.login.callback.handler.class=io.confluent.oauth.azure.managedidentity.OAuthBearerLoginCallbackHandler
-    # sasl.mechanism=OAUTHBEARER
-    # sasl.jaas.config= \
-    #    org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
-    #        clientId='ignored' \
-    #        clientSecret='ignored' \
-    #        extension_logicalCluster='${CLUSTER_ID}' \
-    #        extension_identityPoolId='${CONSUMER_IDENTITY_POOL_ID}';
+    sasl.oauthbearer.token.file=/var/run/secrets/eks.amazonaws.com/serviceaccount/token
+    sasl.login.callback.handler.class=io.confluent.oauth.aws.serviceaccount.OAuthBearerLoginCallbackHandler
+    sasl.jaas.config= \
+       org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
+           clientId='ignored' \
+           clientSecret='ignored' \
+           extension_logicalCluster='${CLUSTER_ID}' \
+           extension_identityPoolId='${CONSUMER_IDENTITY_POOL_ID}';
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: client-properties-configmap-topic-owner
-  namespace: confluent-cloud-aws
+  namespace: ${APPLICATION_NAMESPACE}
 data:
   client_iam.properties: |
     security.protocol=SASL_SSL
     sasl.mechanism=OAUTHBEARER
-    #sasl.oauthbearer.token.file=/var/run/secrets/eks.amazonaws.com/serviceaccount/token
-    sasl.login.callback.handler.class=io.confluent.oauth.kubernetes.OAuthBearerLoginCallbackHandler
-    sasl.jaas.config=org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required;
-    sasl.oauthbearer.extensions=logicalCluster='${CLUSTER_ID},identityPoolId='${TOPIC_OWNER_IDENTITY_POOL_ID}'
-    # security.protocol=SASL_SSL
-    # sasl.oauthbearer.token.endpoint.url=http://169.254.169.254/metadata/identity/oauth2/token?api-version=2018-02-01&resource=${APPLICATION_CLIENT_ID}
-    # sasl.login.callback.handler.class=io.confluent.oauth.azure.managedidentity.OAuthBearerLoginCallbackHandler
-    # sasl.mechanism=OAUTHBEARER
-    # sasl.jaas.config= \
-    #    org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
-    #        clientId='ignored' \
-    #        clientSecret='ignored' \
-    #        extension_logicalCluster='${CLUSTER_ID}' \
-    #        extension_identityPoolId='${TOPIC_OWNER_IDENTITY_POOL_ID}';
+    sasl.oauthbearer.token.file=/var/run/secrets/eks.amazonaws.com/serviceaccount/token
+    sasl.login.callback.handler.class=io.confluent.oauth.aws.serviceaccount.OAuthBearerLoginCallbackHandler
+    sasl.jaas.config= \
+       org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required \
+           clientId='ignored' \
+           clientSecret='ignored' \
+           extension_logicalCluster='${CLUSTER_ID}' \
+           extension_identityPoolId='${TOPIC_OWNER_IDENTITY_POOL_ID}';
