--- a/iac/modules/aws/iam/msk/Makefile
+++ b/iac/modules/aws/iam/msk/Makefile
@@ -1,3 +1,3 @@
 include ${IAC_DIR}/terraform_modules.mk
 
-MODULES=admin resource-owner subscriber-read subscriber-write
+MODULES=admin topic-owner consumer producer
