--- a/iac/use-cases/byok-cluster/Makefile
+++ b/iac/use-cases/byok-cluster/Makefile
@@ -1,51 +1,5 @@
 include ${IAC_DIR}/modules.mk
 
-MODULES = azure/resource-group								\
-		  azure/key-vault									\
-		  azure/key-vault-key								\
-		  confluent/byok									\
-		  azure/vpc											\
-		  confluent/environment								\
-		  confluent/network									\
-		  confluent/private-link							\
-		  azure/private-link								\
-		  confluent/cluster									\
-		  azure/aks											\
-		  azure/app-registration 							\
-		  azure/managed-identity							\
-		  azure/federated-managed-identity					\
-		  confluent/identity-provider						\
-		  confluent/identity-pool-topic-owner				\
-		  confluent/identity-pool-topic-owner-permission	\
-		  confluent/identity-pool-producer					\
-		  confluent/identity-pool-producer-permission		\
-		  confluent/identity-pool-consumer					\
-		  confluent/identity-pool-consumer-permission
-
-MODULES = aws/kms/key										\
-		  confluent/byok-aws								\
-		  aws/kms/key-policy								\
-		  aws/networking/vpc								\
-		  aws/networking/security-groups/ssh-access			\
-		  confluent/environment								\
-		  confluent/network									\
-		  confluent/private-link							\
-		  aws/networking/private-link						\
-		  # confluent/cluster									\
-		  # aws/eks											\
-		  # confluent/identity-provider						\
-		  # IRSA												\
-		  # azure/app-registration 							\
-		  # azure/managed-identity							\
-		  # azure/federated-managed-identity					\
-		  # confluent/identity-pool-topic-owner				\
-		  # confluent/identity-pool-topic-owner-permission	\
-		  # confluent/identity-pool-producer					\
-		  # confluent/identity-pool-producer-permission		\
-		  # confluent/identity-pool-consumer					\
-		  # confluent/identity-pool-consumer-permission
-
-
 MODULES = aws/kms/key										\
 		  confluent/byok-aws								\
 		  aws/kms/key-policy								\
@@ -57,9 +11,12 @@ MODULES = aws/kms/key										\
 		  confluent/cluster									\
 		  aws/networking/private-link						\
 		  aws/eks											\
-		  aws/iam/roles/subscriber-read						\
-		  aws/iam/roles/subscriber-write					\
-		  aws/ec2/resource-owner/							\
+		  aws/iam/roles/topic-owner							\
+		  aws/iam/roles/consumer							\
+		  aws/iam/roles/producer							\
+		  aws/ec2/topic-owner								\
+		  aws/ec2/consumer									\
+		  aws/ec2/producer									\
 		  confluent/identity-provider						\
 		  confluent/identity-pool-topic-owner				\
 		  confluent/identity-pool-topic-owner-permission	\
