--- a/iac/use-cases/byok-cluster/aws/ec2/Makefile
+++ b/iac/use-cases/byok-cluster/aws/ec2/Makefile
@@ -1,3 +1,3 @@
 include ${IAC_DIR}/terraform_modules.mk
 
-MODULES=resource-owner subscriber-read subscriber-write
+MODULES=topic-owner consumer producer
